--- a/assets/css/jr-style.css
+++ b/assets/css/jr-style.css
@@ -1,7 +1,42 @@
-h1 {
-    font-family: 'Work Sans Bold';
-}
+html,
+body {
+    width: 100%;
+    height: 100%; }
 
-p {
-    font-family: 'Work Sans';
-}
+body {
+    font-family: 'Work Sans', 'Helvetica', 'Arial', 'sans-serif'; }
+
+a {
+    color: rgb(255, 255, 255);
+    -webkit-transition: all .35s;
+    -moz-transition: all .35s;
+    transition: all .35s; }
+
+header.candidate-header {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    color: rgb(255, 255, 255);
+    background-image: url("../media/images/background-02.jpg");
+    background-position: center;
+    background-size: cover; }
+
+.btn-gold {
+    color: rgb(255, 255, 255);
+    background-color: rgb(249, 194, 49); }
+    .btn-gold:hover, .btn-gold:focus, .btn-gold:active {
+        color: rgb(255, 255, 255);
+        background-color: rgb(239, 180, 48);
+    }
+
+.btn-turquoise {
+    background-color: rgb(108, 187, 168); }
+
+.btn {
+    border-radius: 300px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase; }
+
+.btn-xl {
+    font-size: 1.5rem;
+    padding: 15px 45px; }
