--- a/assets/css/jr-fonts.css
+++ b/assets/css/jr-fonts.css
@@ -38,19 +38,32 @@
          url('../fonts/titillium-web-v6-latin-600.svg#TitilliumWeb') format('svg'); /* Legacy iOS */
   }
 
+/* work-sans-100 - latin */
+@font-face {
+  font-family: 'Work Sans Light';
+  font-style: normal;
+  font-weight: 100;
+  src: url('../fonts/work-sans-v3-latin-100.eot'); /* IE9 Compat Modes */
+  src: local('Work Sans Thin'), local('WorkSans-Thin'),
+       url('../fonts/work-sans-v3-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/work-sans-v3-latin-100.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/work-sans-v3-latin-100.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/work-sans-v3-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/work-sans-v3-latin-100.svg#WorkSans') format('svg'); /* Legacy iOS */
+}
 /* work-sans-regular - latin */
 @font-face {
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/work-sans-v3-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local('Work Sans'), local('WorkSans-Regular'),
-         url('../fonts/work-sans-v3-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/work-sans-v3-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/work-sans-v3-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/work-sans-v3-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/work-sans-v3-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
-  }
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/work-sans-v3-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Work Sans'), local('WorkSans-Regular'),
+       url('../fonts/work-sans-v3-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/work-sans-v3-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/work-sans-v3-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/work-sans-v3-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/work-sans-v3-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+}
   /* work-sans-500 - latin */
   @font-face {
     font-family: 'Work Sans Medium';
