--- a/assets/css/jr-style.css
+++ b/assets/css/jr-style.css
@@ -1,83 +1,206 @@
 html,
 body {
-    width: 100%;
-    height: 100%; }
+  width: 100%;
+  height: 100%;
+}
 
 body {
-    font-family: 'Work Sans', 'Helvetica', 'Arial', 'sans-serif'; }
+  font-family: "Work Sans", "Helvetica", "Arial", "sans-serif";
+}
 
 a {
-    color: rgb(255, 255, 255);
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s; }
+  color: rgb(255, 255, 255);
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
+}
 
-header.candidate-header {
-    position: relative;
-    width: 100%;
-    padding-top: 300px;
-    padding-bottom: 100px;
-    color: rgb(255, 255, 255);
-    background-image: url("../media/images/background-02.jpg");
-    background-position: center;
-    background-size: cover; }
-    header.candidate-header .candidate-header-content {
-        max-width: 700px;
-        margin-bottom: 100px; }
-        header.candidate-header .candidate-header-content h1 {
-            font-family: 'Titillium Web', 'Helvetica', 'Arial', 'sans-serif';
-            font-weight: 600;
-            font-size: 3.6rem;
-            letter-spacing: 3px; }
+p {
+  padding-bottom: 20px;
+  font-size: 1rem;
+  font-family: "Work Sans Light", "Helvetica", "Arial", "sans-serif";
+  letter-spacing: .5px;
+  margin: 0 auto;
+}
+
+p.text-header {
+  font-family: "Work Sans", "Helvetica", "Arial", "sans-serif";
+  font-size: 1.5rem;
+}
+
+footer {
+  background: rgb(62, 72, 94);
+  color: rgb(255, 255, 255);
+}
+
+.footer-header {
+  padding: 40px;
+}
 
 #mainNav {
-    background-color:transparent;
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
-    font-family: 'Work Sans', 'Helvetica', 'Arial', 'sans-serif';
-    font-size: 1.2rem;
-    letter-spacing: 2px;
-    padding-top: 50px;
-    text-transform: uppercase; }
+  background: transparent;
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
+  font-family: "Work Sans", "Helvetica", "Arial", "sans-serif";
+  font-size: 1.1rem;
+  letter-spacing: 2px;
+  padding-top: 50px;
+  text-transform: uppercase;
+}
 
 .navbar-nav .nav-item .nav-link {
-    color: rgb(255, 255, 255);
-    padding: 10px 20px; }
-    .navbar-nav .nav-item .nav-link:hover {
-        color: rgb(249, 194, 49); }
+  color: rgb(255, 255, 255);
+  padding: 10px 20px;
+}
+.navbar-nav .nav-item .nav-link:hover {
+  color: rgb(249, 194, 49);
+}
 
-#login {
-    color: rgb(249, 194, 49);
-    font-family: 'Work Sans Medium', 'Helvetica', 'Arial', 'sans-serif'; }
-    #login:hover {
-        color: rgb(239, 180, 48); }
+.login {
+  color: rgb(249, 194, 49) !important;
+  font-family: "Work Sans Medium", "Helvetica", "Arial", "sans-serif";
+}
+.login:hover {
+  color: rgb(239, 180, 48) !important;
+}
 
-#signup {
-    background-color: rgb(249, 194, 49);
-    padding: 10px 30px;
-    margin-left: 10px;
-    border-radius: 300px; }
-    #signup:hover {
-        background-color: rgb(239, 180, 48);
-        color: rgb(255, 255, 255); }
+.signup {
+  background: rgb(249, 194, 49);
+  display: inline-block;
+  padding: 10px 20px;
+  margin-left: 10px;
+  border-radius: 300px;
+  color: rgb(255, 255, 255);
+}
 
-.btn-gold {
-    color: rgb(255, 255, 255);
-    background-color: rgb(249, 194, 49); }
-    .btn-gold:hover, .btn-gold:focus, .btn-gold:active {
-        color: rgb(255, 255, 255);
-        background-color: rgb(239, 180, 48);
-    }
-
-.btn-turquoise {
-    background-color: rgb(108, 187, 168); }
+.signup:hover {
+  background: rgb(239, 180, 48);
+  color: rgb(255, 255, 255) !important;
+}
 
 .btn {
-    border-radius: 300px;
-    letter-spacing: 1.5px;
-    text-transform: uppercase; }
+  border-radius: 300px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
 
 .btn-xl {
-    font-size: 1.5rem;
-    padding: 15px 45px; }
+  font-size: 1.5rem;
+  padding: 15px 40px;
+}
+
+.btn-md {
+  font-size: .8rem;
+  padding: 10px 15px;;
+}
+
+.btn-gold {
+  color: rgb(255, 255, 255);
+  background: rgb(249, 194, 49);
+}
+
+.btn-gold:hover,
+.btn-gold:focus,
+.btn-gold:active {
+  color: rgb(255, 255, 255);
+  background: rgb(239, 180, 48);
+}
+
+.btn-turquoise {
+  background: rgb(108, 187, 168);
+}
+
+.btn-turquoise:hover,
+.btn-turquoise:focus,
+.btn-turquoise:active {
+  color: rgb(255, 255, 255);
+  background: rgb(101, 175, 157);
+}
+
+header.candidate-header {
+  position: relative;
+  width: 100%;
+  padding-top: 20%;
+  padding-bottom: 5%;
+  color: rgb(255, 255, 255);
+  background-image: url("../media/images/header-bkg.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+header.candidate-header .candidate-header-content {
+  max-width: 800px;
+  margin-bottom: 100px;
+}
+
+header.candidate-header .candidate-header-content h1 {
+  font-family: "Titillium Web", "Helvetica", "Arial", "sans-serif";
+  font-weight: 600;
+  font-size: 3.6rem;
+  letter-spacing: 3px;
+}
+
+section.role {
+  position: relative;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 60px;
+  color: rgb(255, 255, 255);
+  background-image: url("../media/images/role-bkg.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+section img {
+  margin: 0 auto;
+  margin-top: 50px;
+  display: block;
+}
+
+section.feedback {
+  position: relative;
+  width: 100%;
+  padding-top: 40px;
+}
+
+section.feedback p.text-header {
+  color: rgb(62, 72, 94);
+}
+section.feedback p {
+  color: rgb(93, 93, 93)
+}
+
+section.profile {
+  position: relative;
+  width: 100%;
+  padding-top: 20px;
+  color: rgb(255, 255, 255);
+  background-image: url("../media/images/profile-bkg.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+section.globe {
+  position: relative;
+  width: 100%;
+  padding-top: 40px;
+}
+
+section.globe p.text-header {
+  color: rgb(62, 72, 94);
+}
+section.globe p {
+  color: rgb(93, 93, 93)
+}
+
+.globe-row1 {
+  margin-bottom: 140px;
+}
+
+.globe-footer {
+  max-width: 540px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 40px 0;
+}
