--- a/assets/css/jr-fonts.css
+++ b/assets/css/jr-fonts.css
@@ -51,6 +51,19 @@
        url('../fonts/work-sans-v3-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/work-sans-v3-latin-100.svg#WorkSans') format('svg'); /* Legacy iOS */
 }
+/* work-sans-200 - latin */
+@font-face {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../fonts/work-sans-v3-latin-200.eot'); /* IE9 Compat Modes */
+  src: local('Work Sans ExtraLight'), local('WorkSans-ExtraLight'),
+       url('../fonts/work-sans-v3-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/work-sans-v3-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/work-sans-v3-latin-200.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/work-sans-v3-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/work-sans-v3-latin-200.svg#WorkSans') format('svg'); /* Legacy iOS */
+}
 /* work-sans-regular - latin */
 @font-face {
   font-family: 'Work Sans';
