change button size

--- a/assets/css/jr-style.css
+++ b/assets/css/jr-style.css
@@ -114,8 +114,8 @@ footer {
 }
 
 .btn-md {
-    font-size: .8rem;
-    padding: 10px 15px;
+    font-size: 1rem;
+    padding: 10px 25px;
 }
 
 .btn-gold {
