--- a/assets/css/jr-style.css
+++ b/assets/css/jr-style.css
@@ -110,7 +110,7 @@ footer {
 
 .btn-lg {
     font-size: 1.2rem;
-    padding: 13px 40px;
+    padding: 10px 40px;
 }
 
 .btn-md {
@@ -191,7 +191,8 @@ section img {
 section.feedback {
     position: relative;
     width: 100%;
-    padding-top: 10%;
+    padding-top: 6%;
+    padding-bottom: 6%;
 }
 
 section.feedback p.text-header {
@@ -205,7 +206,8 @@ section.feedback p {
 section.profile {
     position: relative;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 14%;
+    padding-bottom: 14%;
     color: rgb(255, 255, 255);
     background-image: url("../media/images/profile-bkg.jpg");
     background-position: center;
